[package]
name = "tardis"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.1"
num_cpus = "1.16.0"
tokio = { version = "1.31.0", features = ["full"] }
tokio-core = "0.1.18"
tun-tap = { path = "./modules/tuntap" }
