[package]
name = "tardis"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.1"
tokio = { version = "1.31.0", features = ["full"] }
tokio-core = "0.1.18"
anyhow = "1.0"
tun-tap = { path = "./modules/tuntap" }